LAB-1/y.output
Terminals unused in grammar

   DO
   CONTINUE
   BREAK
   DOUBLE
   CASE
   SWITCH
   DEFAULT
   GOTO
   COLON


State 108 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: variable_decl
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN param_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 param_list: param_list COMMA type_specifier ID
    9           | param_list COMMA type_specifier
   10           | type_specifier ID
   11           | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 variable_decl: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID
   18               | CHAR

   19 declaration_list: declaration_list COMMA ID
   20                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   21                 | ID
   22                 | ID LTHIRD CONST_INT RTHIRD

   23 statements: statement
   24           | statements statement

   25 statement: variable_decl
   26          | expression_statement
   27          | compound_statement
   28          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement
   30          | IF LPAREN expression RPAREN statement ELSE statement
   31          | WHILE LPAREN expression RPAREN statement
   32          | PRINTLN LPAREN ID RPAREN SEMICOLON
   33          | RETURN expression SEMICOLON

   34 expression_statement: SEMICOLON
   35                     | expression SEMICOLON

   36 variable: ID
   37         | ID LTHIRD expression RTHIRD

   38 expression: logic_expression
   39           | variable ASSIGNOP logic_expression

   40 logic_expression: rel_expression
   41                 | rel_expression LOGICOP rel_expression

   42 rel_expression: simple_expression
   43               | simple_expression RELOP simple_expression

   44 simple_expression: term
   45                  | simple_expression ADDOP term

   46 term: unary_expression
   47     | term MULOP unary_expression

   48 unary_expression: ADDOP unary_expression
   49                 | NOT unary_expression
   50                 | factor_info

   51 factor_info: factor

   52 factor: variable
   53       | ID LPAREN argument_list RPAREN
   54       | LPAREN expression RPAREN
   55       | CONST_INT
   56       | CONST_FLOAT
   57       | variable INCOP
   58       | variable DECOP

   59 argument_list: arguments
   60              | /* empty */

   61 arguments: arguments COMMA logic_expression
   62          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 29 30
ELSE (259) 30
FOR (260) 28
INT (261) 15
CONST_INT (262) 20 22 55
FLOAT (263) 16
CONST_FLOAT (264) 56
WHILE (265) 31
DO (266)
CONTINUE (267)
BREAK (268)
CHAR (269) 18
DOUBLE (270)
CASE (271)
VOID (272) 17
SWITCH (273)
DEFAULT (274)
GOTO (275)
RETURN (276) 33
PRINTLN (277) 32
ADDOP (278) 45 48
MULOP (279) 47
INCOP (280) 57
DECOP (281) 58
RELOP (282) 43
ASSIGNOP (283) 39
LOGICOP (284) 41
NOT (285) 49
LPAREN (286) 6 7 28 29 30 31 32 53 54
RPAREN (287) 6 7 28 29 30 31 32 53 54
LCURL (288) 12 13
RCURL (289) 12 13
LTHIRD (290) 20 22 37
RTHIRD (291) 20 22 37
COMMA (292) 8 9 19 20 61
COLON (293)
SEMICOLON (294) 14 32 33 34 35
ID (295) 6 7 8 10 19 20 21 22 32 36 37 53


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
start (42)
    on left: 1, on right: 0
program (43)
    on left: 2 3, on right: 1 2
unit (44)
    on left: 4 5, on right: 2 3
func_definition (45)
    on left: 6 7, on right: 5
param_list (46)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (47)
    on left: 12 13, on right: 6 7 27
variable_decl (48)
    on left: 14, on right: 4 25
type_specifier (49)
    on left: 15 16 17 18, on right: 6 7 8 9 10 11 14
declaration_list (50)
    on left: 19 20 21 22, on right: 14 19 20
statements (51)
    on left: 23 24, on right: 12 24
statement (52)
    on left: 25 26 27 28 29 30 31 32 33, on right: 23 24 28 29 30 31
expression_statement (53)
    on left: 34 35, on right: 26 28
variable (54)
    on left: 36 37, on right: 39 52 57 58
expression (55)
    on left: 38 39, on right: 28 29 30 31 33 35 37 54
logic_expression (56)
    on left: 40 41, on right: 38 39 61 62
rel_expression (57)
    on left: 42 43, on right: 40 41
simple_expression (58)
    on left: 44 45, on right: 42 43 45
term (59)
    on left: 46 47, on right: 44 45 47
unary_expression (60)
    on left: 48 49 50, on right: 46 47 48 49
factor_info (61)
    on left: 51, on right: 50
factor (62)
    on left: 52 53 54 55 56 57 58, on right: 51
argument_list (63)
    on left: 59 60, on right: 53
arguments (64)
    on left: 61 62, on right: 59 61


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    start            go to state 5
    program          go to state 6
    unit             go to state 7
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 3

   18 type_specifier: CHAR .

    $default  reduce using rule 18 (type_specifier)


State 4

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 5

    0 $accept: start . $end

    $end  shift, and go to state 11


State 6

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 1 (start)

    unit             go to state 12
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 7

    3 program: unit .

    $default  reduce using rule 3 (program)


State 8

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 9

    4 unit: variable_decl .

    $default  reduce using rule 4 (unit)


State 10

    6 func_definition: type_specifier . ID LPAREN param_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    6 func_definition: type_specifier ID . LPAREN param_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   21 declaration_list: ID .
   22                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 21 (declaration_list)


State 14

   14 variable_decl: type_specifier declaration_list . SEMICOLON
   19 declaration_list: declaration_list . COMMA ID
   20                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    6 func_definition: type_specifier ID LPAREN . param_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    RPAREN  shift, and go to state 19

    param_list      go to state 20
    type_specifier  go to state 21


State 16

   22 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   19 declaration_list: declaration_list COMMA . ID
   20                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   14 variable_decl: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (variable_decl)


State 19

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 24

    compound_statement  go to state 25


State 20

    6 func_definition: type_specifier ID LPAREN param_list . RPAREN compound_statement
    8 param_list: param_list . COMMA type_specifier ID
    9           | param_list . COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 21

   10 param_list: type_specifier . ID
   11           | type_specifier .

    ID  shift, and go to state 28

    $default  reduce using rule 11 (param_list)


State 22

   22 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 29


State 23

   19 declaration_list: declaration_list COMMA ID .
   20                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 30

    $default  reduce using rule 19 (declaration_list)


State 24

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    INT          shift, and go to state 1
    CONST_INT    shift, and go to state 33
    FLOAT        shift, and go to state 2
    CONST_FLOAT  shift, and go to state 34
    WHILE        shift, and go to state 35
    CHAR         shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 41
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    compound_statement    go to state 44
    variable_decl         go to state 45
    type_specifier        go to state 46
    statements            go to state 47
    statement             go to state 48
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 25

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 26

    6 func_definition: type_specifier ID LPAREN param_list RPAREN . compound_statement

    LCURL  shift, and go to state 24

    compound_statement  go to state 59


State 27

    8 param_list: param_list COMMA . type_specifier ID
    9           | param_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    type_specifier  go to state 60


State 28

   10 param_list: type_specifier ID .

    $default  reduce using rule 10 (param_list)


State 29

   22 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 22 (declaration_list)


State 30

   20 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 61


State 31

   29 statement: IF . LPAREN expression RPAREN statement
   30          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 62


State 32

   28 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 63


State 33

   55 factor: CONST_INT .

    $default  reduce using rule 55 (factor)


State 34

   56 factor: CONST_FLOAT .

    $default  reduce using rule 56 (factor)


State 35

   31 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 64


State 36

   33 statement: RETURN . expression SEMICOLON

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 65
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 37

   32 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 66


State 38

   48 unary_expression: ADDOP . unary_expression

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable          go to state 67
    unary_expression  go to state 68
    factor_info       go to state 57
    factor            go to state 58


State 39

   49 unary_expression: NOT . unary_expression

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable          go to state 67
    unary_expression  go to state 69
    factor_info       go to state 57
    factor            go to state 58


State 40

   54 factor: LPAREN . expression RPAREN

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 70
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 41

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 42

   34 expression_statement: SEMICOLON .

    $default  reduce using rule 34 (expression_statement)


State 43

   36 variable: ID .
   37         | ID . LTHIRD expression RTHIRD
   53 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 71
    LTHIRD  shift, and go to state 72

    $default  reduce using rule 36 (variable)


State 44

   27 statement: compound_statement .

    $default  reduce using rule 27 (statement)


State 45

   25 statement: variable_decl .

    $default  reduce using rule 25 (statement)


State 46

   14 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 73

    declaration_list  go to state 14


State 47

   12 compound_statement: LCURL statements . RCURL
   24 statements: statements . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    INT          shift, and go to state 1
    CONST_INT    shift, and go to state 33
    FLOAT        shift, and go to state 2
    CONST_FLOAT  shift, and go to state 34
    WHILE        shift, and go to state 35
    CHAR         shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 24
    RCURL        shift, and go to state 74
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    compound_statement    go to state 44
    variable_decl         go to state 45
    type_specifier        go to state 46
    statement             go to state 75
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 48

   23 statements: statement .

    $default  reduce using rule 23 (statements)


State 49

   26 statement: expression_statement .

    $default  reduce using rule 26 (statement)


State 50

   39 expression: variable . ASSIGNOP logic_expression
   52 factor: variable .
   57       | variable . INCOP
   58       | variable . DECOP

    INCOP     shift, and go to state 76
    DECOP     shift, and go to state 77
    ASSIGNOP  shift, and go to state 78

    $default  reduce using rule 52 (factor)


State 51

   35 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 79


State 52

   38 expression: logic_expression .

    $default  reduce using rule 38 (expression)


State 53

   40 logic_expression: rel_expression .
   41                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 80

    $default  reduce using rule 40 (logic_expression)


State 54

   42 rel_expression: simple_expression .
   43               | simple_expression . RELOP simple_expression
   45 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 81
    RELOP  shift, and go to state 82

    $default  reduce using rule 42 (rel_expression)


State 55

   44 simple_expression: term .
   47 term: term . MULOP unary_expression

    MULOP  shift, and go to state 83

    $default  reduce using rule 44 (simple_expression)


State 56

   46 term: unary_expression .

    $default  reduce using rule 46 (term)


State 57

   50 unary_expression: factor_info .

    $default  reduce using rule 50 (unary_expression)


State 58

   51 factor_info: factor .

    $default  reduce using rule 51 (factor_info)


State 59

    6 func_definition: type_specifier ID LPAREN param_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 60

    8 param_list: param_list COMMA type_specifier . ID
    9           | param_list COMMA type_specifier .

    ID  shift, and go to state 84

    $default  reduce using rule 9 (param_list)


State 61

   20 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 85


State 62

   29 statement: IF LPAREN . expression RPAREN statement
   30          | IF LPAREN . expression RPAREN statement ELSE statement

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 86
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 63

   28 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    expression_statement  go to state 87
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 64

   31 statement: WHILE LPAREN . expression RPAREN statement

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 88
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 65

   33 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 89


State 66

   32 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 90


State 67

   52 factor: variable .
   57       | variable . INCOP
   58       | variable . DECOP

    INCOP  shift, and go to state 76
    DECOP  shift, and go to state 77

    $default  reduce using rule 52 (factor)


State 68

   48 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 48 (unary_expression)


State 69

   49 unary_expression: NOT unary_expression .

    $default  reduce using rule 49 (unary_expression)


State 70

   54 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 91


State 71

   53 factor: ID LPAREN . argument_list RPAREN

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    $default  reduce using rule 60 (argument_list)

    variable           go to state 67
    logic_expression   go to state 92
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58
    argument_list      go to state 93
    arguments          go to state 94


State 72

   37 variable: ID LTHIRD . expression RTHIRD

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 95
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 73

   21 declaration_list: ID .
   22                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 21 (declaration_list)


State 74

   12 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 12 (compound_statement)


State 75

   24 statements: statements statement .

    $default  reduce using rule 24 (statements)


State 76

   57 factor: variable INCOP .

    $default  reduce using rule 57 (factor)


State 77

   58 factor: variable DECOP .

    $default  reduce using rule 58 (factor)


State 78

   39 expression: variable ASSIGNOP . logic_expression

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 67
    logic_expression   go to state 96
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 79

   35 expression_statement: expression SEMICOLON .

    $default  reduce using rule 35 (expression_statement)


State 80

   41 logic_expression: rel_expression LOGICOP . rel_expression

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 67
    rel_expression     go to state 97
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 81

   45 simple_expression: simple_expression ADDOP . term

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable          go to state 67
    term              go to state 98
    unary_expression  go to state 56
    factor_info       go to state 57
    factor            go to state 58


State 82

   43 rel_expression: simple_expression RELOP . simple_expression

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 67
    simple_expression  go to state 99
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 83

   47 term: term MULOP . unary_expression

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable          go to state 67
    unary_expression  go to state 100
    factor_info       go to state 57
    factor            go to state 58


State 84

    8 param_list: param_list COMMA type_specifier ID .

    $default  reduce using rule 8 (param_list)


State 85

   20 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 20 (declaration_list)


State 86

   29 statement: IF LPAREN expression . RPAREN statement
   30          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 101


State 87

   28 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    expression_statement  go to state 102
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 88

   31 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 103


State 89

   33 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 33 (statement)


State 90

   32 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 104


State 91

   54 factor: LPAREN expression RPAREN .

    $default  reduce using rule 54 (factor)


State 92

   62 arguments: logic_expression .

    $default  reduce using rule 62 (arguments)


State 93

   53 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 105


State 94

   59 argument_list: arguments .
   61 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 106

    $default  reduce using rule 59 (argument_list)


State 95

   37 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 107


State 96

   39 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 39 (expression)


State 97

   41 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 41 (logic_expression)


State 98

   45 simple_expression: simple_expression ADDOP term .
   47 term: term . MULOP unary_expression

    MULOP  shift, and go to state 83

    $default  reduce using rule 45 (simple_expression)


State 99

   43 rel_expression: simple_expression RELOP simple_expression .
   45 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 81

    $default  reduce using rule 43 (rel_expression)


State 100

   47 term: term MULOP unary_expression .

    $default  reduce using rule 47 (term)


State 101

   29 statement: IF LPAREN expression RPAREN . statement
   30          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    INT          shift, and go to state 1
    CONST_INT    shift, and go to state 33
    FLOAT        shift, and go to state 2
    CONST_FLOAT  shift, and go to state 34
    WHILE        shift, and go to state 35
    CHAR         shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    compound_statement    go to state 44
    variable_decl         go to state 45
    type_specifier        go to state 46
    statement             go to state 108
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 102

   28 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 50
    expression         go to state 109
    logic_expression   go to state 52
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 103

   31 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    INT          shift, and go to state 1
    CONST_INT    shift, and go to state 33
    FLOAT        shift, and go to state 2
    CONST_FLOAT  shift, and go to state 34
    WHILE        shift, and go to state 35
    CHAR         shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    compound_statement    go to state 44
    variable_decl         go to state 45
    type_specifier        go to state 46
    statement             go to state 110
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 104

   32 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 111


State 105

   53 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 53 (factor)


State 106

   61 arguments: arguments COMMA . logic_expression

    CONST_INT    shift, and go to state 33
    CONST_FLOAT  shift, and go to state 34
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    ID           shift, and go to state 43

    variable           go to state 67
    logic_expression   go to state 112
    rel_expression     go to state 53
    simple_expression  go to state 54
    term               go to state 55
    unary_expression   go to state 56
    factor_info        go to state 57
    factor             go to state 58


State 107

   37 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 37 (variable)


State 108

   29 statement: IF LPAREN expression RPAREN statement .
   30          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 113

    ELSE      [reduce using rule 29 (statement)]
    $default  reduce using rule 29 (statement)


State 109

   28 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 114


State 110

   31 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 31 (statement)


State 111

   32 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 32 (statement)


State 112

   61 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 61 (arguments)


State 113

   30 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    INT          shift, and go to state 1
    CONST_INT    shift, and go to state 33
    FLOAT        shift, and go to state 2
    CONST_FLOAT  shift, and go to state 34
    WHILE        shift, and go to state 35
    CHAR         shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    compound_statement    go to state 44
    variable_decl         go to state 45
    type_specifier        go to state 46
    statement             go to state 115
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 114

   28 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 31
    FOR          shift, and go to state 32
    INT          shift, and go to state 1
    CONST_INT    shift, and go to state 33
    FLOAT        shift, and go to state 2
    CONST_FLOAT  shift, and go to state 34
    WHILE        shift, and go to state 35
    CHAR         shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 42
    ID           shift, and go to state 43

    compound_statement    go to state 44
    variable_decl         go to state 45
    type_specifier        go to state 46
    statement             go to state 116
    expression_statement  go to state 49
    variable              go to state 50
    expression            go to state 51
    logic_expression      go to state 52
    rel_expression        go to state 53
    simple_expression     go to state 54
    term                  go to state 55
    unary_expression      go to state 56
    factor_info           go to state 57
    factor                go to state 58


State 115

   30 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 30 (statement)


State 116

   28 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 28 (statement)
